# ir-ac-control

./: .gitignore  CMakeLists.txt  ir.h.in  lirc_daikin.cpp  lirc_daikin.h  lirc_payload.cpp  lirc_payload.h  lirc_serializer.cpp  lirc_serializer.h  main.cpp  util.h
src/cli/: main.cpp
src/common/: CMakeLists.txt  lirc_serializer.cpp  util.h
www/: package-lock.json  package.json
www/components/: ac_bug.tsx  environmental_bug.tsx  login_bug.tsx
www/pages/: _document.tsx  index.tsx
www/styles/: Home.module.css
